--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <h1>The Longest Word</h1>
+  <%= link_to "Lancer une nouvelle game !", games_path(@game), data: { turbo_method: "post" } %>
+</div>
